(lang dune 3.16)

(name osc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Fay Carsons" "John Else")

(maintainers "Fay Carsons")

(license MIT)

(documentation https://github.com/FayCarsons/ocaml-osc)

(package
 (name osc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))


; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
